--- a/src/components/forms/checkbox-radio/toggle/c-form-toggle/c-form-toggle.css
+++ b/src/components/forms/checkbox-radio/toggle/c-form-toggle/c-form-toggle.css
@@ -21,7 +21,7 @@ Licensed under the terms of the MIT license. See the LICENSE file in the project
 
 .base{
     display: flex;
-    align-items: flex-end;
+    align-items: flex-start;
 }
 
 td .base{
